exercises/gatekeeper/gator/check-nested-value/constraint.yaml
kind: k8sCheckNestedValue
apiVersion: constraints.gatekeeper.sh/v1beta1
metadata:
  name: constraint
spec:
  enforcementAction: enforce
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    forbiddenValue: true
