exercises/gatekeeper/gator/check-nested-value/test-no-label-a-failure.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-failure
  labels:
spec:
  containers:
  - name: nginx
    image: nginx
