exercises/gatekeeper/gator/check-nested-value/test-no-label-b-failure.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-failure
  labels:
    label_a:
spec:
  containers:
  - name: nginx
    image: nginx
