exercises/gatekeeper/gator/check-nested-value/test-no-labels-failure.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-failure
spec:
  containers:
  - name: nginx
    image: nginx
