exercises/gatekeeper/gator/check-nested-value/test-success.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-success
  labels:
    label_a:
      label::b: required-value
spec:
  containers:
  - name: nginx
    image: nginx
