exercises/gatekeeper/gator/check-nested-value/test-wrong-value-failure.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-failure
  labels:
    label_a:
      label::b: wrong-value
spec:
  containers:
  - name: nginx
    image: nginx
